--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "dat.gui": "^0.7.7",
+    "gsap": "^3.5.1",
+    "live-server": "^1.2.1",
     "react": "^16.13.1",
+    "react-dat-gui": "^4.0.3",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
